--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header h1 {
 header h1 .seo {
     color: #d9dcd6;
 }
-
+/* renamed element selector to reflect html */
 header nav {
     padding-top: 15px;
     margin-right: 20px;
